<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.codevallee.formation.android_tp12.DeleteUserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:textStyle="bold"
        android:textSize="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/confirm_user_deletion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete_user"
            android:textSize="24dp"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/confirm_user_deletion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="20dp"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            android:background="@color/colorDelete"
            android:textColor="@color/colorDeleteText"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20dp"
            />

    </LinearLayout>

</LinearLayout>
